--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Iyed Ben Ali</div>
-                <div class="classbox">
-                <a href="#">Hire me</a>
-            </div>
+                
             </div>
         </div>
     </section>
@@ -44,7 +42,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="https://images.pexels.com/photos/2050979/pexels-photo-2050979.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="img">
+                    <img src="https://firebasestorage.googleapis.com/v0/b/jewerly-7a07f.appspot.com/o/ajekazea.PNG?alt=media&token=198040c1-f729-48ae-b1d7-071f03c5a987" alt="img">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Iyed Ben Ali, a Full Stack JavaScript Developer from Tunisia. I have expertise in HTML, CSS, JavaScript, React, Node.js, Express.js, MySQL, and MongoDB.</div>
@@ -100,7 +98,7 @@
                         <br><br>
                         I also have full-stack developer experience with popular open-source CMS like (WordPress, bubble.io and others) .
                         <br> 
-                        Visit my<a href="https://www.facebook.com/heemal.himalpun" target="-blank" id="link">Facebook</a>for more details<a href="#contact" id="link">contact</a>me.
+                        Visit my<a href="https://www.facebook.com/heemal.himalpun" target="-blank" id="link">Linkedin</a>for more details<a href="#contact" id="link">contact</a>me.
 
                     </p>
                     <a href="#contact">Learn more</a>
@@ -223,21 +221,21 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Hem Bahadur Pun</div>
+                                <div class="sub-title">Iyed Ben Ali</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Address</div>
-                                <div class="sub-title">Pokhara, Nepal</div>
+                                <div class="sub-title">Sousse,  Tunis</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">mail@gmail.com</div>
+                                <div class="sub-title">iyedbenali27@gmail.com</div>
                             </div>
                         </div>
                     </div>
